<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.trainerProfile.CreatePlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="RtlSymmetry">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingBottom="18dp"
            android:text="@string/personal_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/tv_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/surname"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/tv_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/tv_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/birthday"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <AutoCompleteTextView
            android:id="@+id/ac_tv_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/gender"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingTop="32dp"
            android:paddingBottom="18dp"
            android:text="@string/contact_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />


        <EditText
            android:id="@+id/tv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingTop="32dp"
            android:paddingBottom="18dp"
            android:text="@string/professional_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/tv_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/weight"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />


        <AutoCompleteTextView
            android:id="@+id/ac_tv_sport_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/sport_type"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/btn_save_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="#ED2840"
            android:fontFamily="@font/oswald"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>


</ScrollView>