<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingTop="24dp"
            android:paddingBottom="18dp"
            android:text="@string/personal_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/surname"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/middleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingTop="32dp"
            android:paddingBottom="18dp"
            android:text="@string/contact_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/oswald"
                android:hint="@string/region"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/showRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oswald"
            android:paddingTop="32dp"
            android:paddingBottom="18dp"
            android:text="@string/professional_info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />


        <!--        <EditText-->
        <!--            android:id="@+id/sportCategory"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:enabled="false"-->
        <!--            android:focusable="false"-->
        <!--            android:backgroundTint="@color/white"-->
        <!--            android:ems="10"-->
        <!--            android:fontFamily="@font/oswald"-->
        <!--            android:hint="@string/sport_category"-->
        <!--            android:inputType="textCapWords"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textColorHint="@color/white"-->
        <!--            android:textSize="16sp"-->
        <!--            android:textStyle="normal" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/sportType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/oswald"
                android:hint="@string/sport_type"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/showSportType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <EditText
            android:id="@+id/experience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/oswald"
            android:hint="@string/experience"
            android:inputType="textCapWords"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

        <!--        <Button-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:backgroundTint="#ED2840"-->
        <!--            android:fontFamily="@font/oswald"-->
        <!--            android:padding="10dp"-->
        <!--            android:text="@string/save"-->
        <!--            android:textSize="16sp"-->
        <!--            android:textStyle="normal" />-->
    </LinearLayout>

</ScrollView>